modification fichier yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       ports :
          - "5000:5000"
       volumes:
-         - ./backend/app
-         - ./app/node_modules
+         - ./frontend/app
+         - /app/node_modules
       networks:
          - frontend
          - backend
